<resources>
    <string name="app_name">Note exchange</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Settings</string>
    <string name="title_favorite">Favorite</string>
    <string name="large_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="note_caption">Caption</string>
    <string name="save_changes">save changes</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="add_date">add date</string>
    <string name="put_email">put email</string>
    <string name="sing_in">Sing in</string>
    <string name="sing_up">sing up</string>
    <string name="caption">Caption</string>
    <string name="date_time">fr, 14 feb 2021</string>
    <string name="deleting">Note is deleting, please wait.</string>
    <string name="saving">Note have saved successfully.</string>
    <string name="save_profile">Profile is saving, please wait.</string>
    <string name="waiting">please waiting</string>
    <string name="Authorization">Authorization</string>
    <string name="put_password">put password</string>
    <string name="fragment_detail">Edit</string>
    <string name="put_name">put name</string>
    <string name="put_last_name">put last name</string>
    <string name="error_row">the password and email fields cannot be empty</string>
    <string name="website_button_text">website</string>
    <string name="about_text">Free cross-platform service for creating and storing notes. Supports WEB and IOS platforms</string>
    <string name="about_fragment">About us</string>
    <string name="error_message">Error!</string>
</resources>